Body Photos now take you back to the blog entry they are attached to when you create them and fixed a spacing problem

--- a/public/stylesheets/calendar.css
+++ b/public/stylesheets/calendar.css
@@ -58,7 +58,7 @@
     vertical-align: top;
     text-decoration: none;
     color: #000;
-    padding-top: .5em;
+    overflow: hidden;
 }
 
 #calendar .day {
